Move FileLock cluster service to its own module

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -99,6 +99,7 @@
         <module>exec</module>
         <module>fhir</module>
         <module>file</module>
+        <module>file-cluster-service</module>
         <module>file-watch</module>
         <module>flatpack</module>
         <module>fop</module>
