--- a/extensions/telegram/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/telegram/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -22,7 +22,7 @@
 #
 ---
 name: "Camel Telegram"
-description: "Send and receive messages acting as a Telegram Bot Telegram Bot API"
+description: "Send and receive messages using the Telegram Bot API"
 metadata:
   icon-url: "https://raw.githubusercontent.com/apache/camel-website/main/antora-ui-camel/src/img/logo-d.svg"
   guide: "https://camel.apache.org/camel-quarkus/latest/reference/extensions/telegram.html"
