--- a/extensions/arangodb/deployment/pom.xml
+++ b/extensions/arangodb/deployment/pom.xml
@@ -42,6 +42,10 @@
             <groupId>org.apache.camel.quarkus</groupId>
             <artifactId>camel-quarkus-arangodb</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-netty-deployment</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
