--- a/docs/modules/ROOT/examples/others/js-dsl.yml
+++ b/docs/modules/ROOT/examples/others/js-dsl.yml
@@ -4,7 +4,7 @@ cqArtifactId: camel-quarkus-js-dsl
 cqArtifactIdBase: js-dsl
 cqNativeSupported: true
 cqStatus: Stable
-cqDeprecated: false
+cqDeprecated: true
 cqJvmSince: 1.8.0
 cqNativeSince: 1.8.0
 cqCamelPartName: js-dsl
