--- a/integration-tests-jvm/pom.xml
+++ b/integration-tests-jvm/pom.xml
@@ -77,7 +77,7 @@
         <module>jooq</module>
         <module>json-patch</module>
         <module>jsonapi</module>
-        <module>langchain-embeddings</module>
+        <module>langchain4j-embeddings</module>
         <module>ldif</module>
         <module>lucene</module>
         <module>mail-microsoft-oauth</module>
