--- a/extensions-jvm/pom.xml
+++ b/extensions-jvm/pom.xml
@@ -78,8 +78,8 @@
         <module>jooq</module>
         <module>json-patch</module>
         <module>jsonapi</module>
-        <module>langchain-chat</module>
-        <module>langchain-embeddings</module>
+        <module>langchain4j-chat</module>
+        <module>langchain4j-embeddings</module>
         <module>ldif</module>
         <module>lucene</module>
         <module>mail-microsoft-oauth</module>
