Http: use FIPS complaiant keystore and truststore

--- a/integration-test-groups/http/common/src/main/resources/application.properties
+++ b/integration-test-groups/http/common/src/main/resources/application.properties
@@ -31,7 +31,7 @@ quarkus.security.users.embedded.roles.admin=admin
 quarkus.security.users.embedded.roles.noadmin=user
 
 quarkus.http.insecure-requests=enabled
-quarkus.http.ssl.certificate.key-store-file=jsse/keystore.p12
-quarkus.http.ssl.certificate.key-store-password=changeit
+quarkus.http.ssl.certificate.key-store-file=jsse/localhost-keystore.pkcs12
+quarkus.http.ssl.certificate.key-store-password=localhost-keystore-password
 quarkus.resteasy.gzip.enabled=true
 
