Http: use FIPS complaiant keystore and truststore

--- a/pom.xml
+++ b/pom.xml
@@ -534,6 +534,7 @@
                             <exclude>**/*.conf</exclude>
                             <exclude>**/*.csv</exclude>
                             <exclude>**/*.der</exclude>
+                            <exclude>**/*.ext</exclude>
                             <exclude>**/*.ftl</exclude>
                             <exclude>**/*.graphql</exclude>
                             <exclude>**/*.ics</exclude>
@@ -550,6 +551,7 @@
                             <exclude>**/*.mp4</exclude>
                             <exclude>**/*.mvel</exclude>
                             <exclude>**/*.p12</exclude>
+                            <exclude>**/*.pkcs12</exclude>
                             <exclude>**/*.pem</exclude>
                             <exclude>**/*.pgp</exclude>
                             <exclude>**/*.proto</exclude>
