Use `xml-io-dsl` instead of `xml-jaxb` when using the `management` extension.

--- a/integration-tests/main-xml-io/src/main/resources/application.properties
+++ b/integration-tests/main-xml-io/src/main/resources/application.properties
@@ -19,14 +19,18 @@
 # Quarkus
 #
 quarkus.native.add-all-charsets = true
+quarkus.log.file.enable = true
+quarkus.log.file.path = target/quarkus.log
 
 #
 # Camel
 #
 camel.context.name=quarkus-camel-example
 camel.rest.component = platform-http
+camel.main.dumpRoutesInclude = all
 
 #
 # Main
 #
 camel.main.routes-include-pattern = routes/my-routes.xml,routes/my-routes-iso_8859_15.xml,classpath:rests/my-rests.xml,classpath:templates/my-templates.xml,classpath:routes/my-templated.xml,routes/my-route-with-beanType.xml
+camel.main.dump-routes = xml
