--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -42,6 +42,7 @@
         <module>attachments</module>
         <module>avro</module>
         <!--<module>avro-rpc</module> https://github.com/apache/camel-quarkus/issues/4462 -->
+        <module>aws-bedrock</module>
         <module>aws2-athena</module>
         <module>aws2-cw</module>
         <module>aws2-ddb</module>
