--- a/extensions-jvm/spring-redis/runtime/pom.xml
+++ b/extensions-jvm/spring-redis/runtime/pom.xml
@@ -48,12 +48,8 @@
             <artifactId>camel-quarkus-support-spring</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-redis</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-spring-data-commons-api</artifactId>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-expression</artifactId>
         </dependency>
     </dependencies>
 
