--- a/integration-test-groups/foundation/core-fault-tolerance/pom.xml
+++ b/integration-test-groups/foundation/core-fault-tolerance/pom.xml
@@ -59,6 +59,7 @@
     </dependencies>
 
     <profiles>
+        <!-- TODO: https://github.com/apache/camel-quarkus/issues/5995
         <profile>
             <id>native</id>
             <activation>
@@ -86,6 +87,7 @@
                 </plugins>
             </build>
         </profile>
+        -->
         <profile>
             <id>virtualDependencies</id>
             <activation>
