Prevent xml-jaxb extension producing CamelModelToXMLDumperBuildItem if xml-io-dsl is present

--- a/integration-tests/main-xml-jaxb/src/main/resources/application.properties
+++ b/integration-tests/main-xml-jaxb/src/main/resources/application.properties
@@ -31,5 +31,5 @@ camel.main.dumpRoutesInclude = all
 #
 # Main
 #
-camel.main.routes-include-pattern = classpath:routes/my-routes.xml,classpath:rests/my-rests.xml,classpath:templates/my-templates.xml
+camel.main.routes-include-pattern = classpath:routes/my-routes.yaml,classpath:rests/my-rests.yaml,classpath:templates/my-templates.yaml
 camel.main.dump-routes = xml
