Enable xchange tests
Fixes #4516

--- a/poms/bom-test/pom.xml
+++ b/poms/bom-test/pom.xml
@@ -335,6 +335,10 @@
                         <groupId>javax.annotation</groupId>
                         <artifactId>javax.annotation-api</artifactId>
                     </exclusion>
+                    <exclusion>
+                        <groupId>org.checkerframework</groupId>
+                        <artifactId>checker-qual</artifactId>
+                    </exclusion>
                 </exclusions>
             </dependency>
             <dependency>
