--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -237,7 +237,7 @@
         <module>vertx</module>
         <module>vertx-websocket</module>
         <module>weather</module>
-        <!--<module>xchange</module> https://github.com/apache/camel-quarkus/issues/4516 -->
+        <module>xchange</module>
         <module>xj</module>
         <module>xml-grouped</module>
         <module>xml-jaxp</module>
