Add Wasm extension
Fixes #5816

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -251,6 +251,7 @@
         <module>vertx</module>
         <module>vertx-http</module>
         <module>vertx-websocket</module>
+        <module>wasm</module>
         <module>weather</module>
         <module>xchange</module>
         <module>xj</module>
