--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -236,6 +236,7 @@
         <module>velocity</module>
         <module>vertx</module>
         <module>vertx-websocket</module>
+        <module>wasm</module>
         <module>weather</module>
         <module>xchange</module>
         <module>xj</module>
