--- a/integration-tests-jvm/pom.xml
+++ b/integration-tests-jvm/pom.xml
@@ -81,6 +81,7 @@
         <module>ldif</module>
         <module>lucene</module>
         <module>mail-microsoft-oauth</module>
+        <module>milvus</module>
         <module>mvel</module>
         <module>opensearch</module>
         <module>printer</module>
