Activate format profile as part of CI checks

--- a/.github/workflows/camel-master-cron.yaml
+++ b/.github/workflows/camel-master-cron.yaml
@@ -71,9 +71,12 @@ jobs:
             && cd camel \
             && echo "Current Camel commit:" $(git rev-parse HEAD) \
             && ./mvnw ${CQ_MAVEN_ARGS} clean install -Dquickly -T1C
+      - name: Update extension metadata
+        run: |
+          ./mvnw -N cq:update-quarkus-metadata ${CQ_MAVEN_ARGS}
       - name: mvn clean install -DskipTests
         run: |
-          eval ./mvnw ${CQ_MAVEN_ARGS} clean install -DskipTests -Dquarkus.build.skip
+          eval ./mvnw ${CQ_MAVEN_ARGS} clean install -DskipTests -Dquarkus.build.skip -Pformat
       - name: Sync Maven properties
         run: |
           ./mvnw cq:sync-versions ${CQ_MAVEN_ARGS} -N
